# meta_hack

./: Dockerfile  README.md  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
clinical-trial-triage/: .gitignore  Dockerfile  README.md  inference.py  pyproject.toml  requirements.txt
clinical-trial-triage/rl/: config.py  gym_env.py  smoke_test.py
clinical-trial-triage/scripts/: baseline_inference.py  validate_submission.py
clinical-trial-triage/server/: app.py  environment.py
clinical-trial-triage/tasks/: graders.py  production_cases.py
clinical-trial-triage/tests/: test_openenv_adapter.py  test_session_isolation.py
clinical-trial-triage/ui/: triage-test-inputs.txt  triage.html
rl/: __init__.py  action_templates.py  evaluate.py  train.py
scripts/: __init__.py  data_quality_report.py  groq_key_pool.py  heuristic_baseline.py  test_generalization.py  validate_submission.py
server/: app.py  environment.py  openenv_env.py
space-download-check/: .gitignore
space-download-check/rl/: featurizer.py
space-download-check/server/: environment.py
space-download-check/tests/: test_narrative_grader_generalization.py
tasks/: case_bank.py  graders.py
tests/: test_rl_env.py
ui/: docs.html  index.html  performance.html
