[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "clinical-trial-triage"
version = "2.0.0"
description = "OpenEnv: Clinical Trial Triage RL Environment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["openenv", "reinforcement-learning", "clinical-trials", "healthcare", "AI"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.42.0",
    "pydantic>=2.12.0",
    "httpx>=0.28.0",
    "groq>=0.18.0",
    "openenv-core>=0.2.2",
    "stable-baselines3>=2.7.0",
    "gymnasium>=1.2.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "requests>=2.32.0",
    "openai>=2.7.2",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "outputs*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
